fix: Reduce margin between buttons to avoid line split on narrowest size

--- a/portal/static/portal/sass/partials/_subnavs.scss
+++ b/portal/static/portal/sass/partials/_subnavs.scss
@@ -116,3 +116,9 @@
     display: none;
   }
 }
+
+@media (max-width: $mobile-max-width) {
+  .sub-nav .button--regular {
+    @include _margin(0px, 0px, 0px, 0px);
+  }
+}
